Fix character area spacing on index page and update submit-button and image-area. Add favicon.

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -94,11 +94,14 @@ a {
   }
 
   #image-area {
+  background-image: src="";
   width: 120px;
   height:120px;
   border: solid black 1px;
   margin: 0 auto;
   padding: 20px;
+  background-repeat: no-repeat;
+ background-size: cover;
 }
 
   .submit-button {
@@ -109,7 +112,7 @@ a {
       margin: 3px;
       background-color: #f3cc64;
       text-align: center;
-      font-size: 0.8rem;
+      font-size: 1rem;
       font-family: Satisfy, sans-serif;
       border-radius: 5px;
   }
